<resources>
    <string name="app_name">Castle</string>
    <!-- Strings used for fragments for navigation -->

    <string name="reset_windows_button">Reset Windows</string>
    <string name="get_winners_easy_mode">Get winners Easy mode</string>
    <string name="get_winners_hard_mode">Get winners Hard mode</string>
    <string name="get_windows_state">Get windows state</string>
    <string name="start_simulation">Start Game</string>
    <string name="open_windows_label">OPEN WINDOWS:</string>
    <string name="closed_windows_label">CLOSED WINDOWS:</string>
    <string name="left_open_windows_label">LEFT OPEN WINDOWS:</string>
    <string name="right_open_windows_label">RIGHT OPEN WINDOWS:</string>
    <string name="windows_label">WINDOWS:</string>
    <string name="explanation_label">click to open(blue) or close(grey)</string>

    <string name="simulation_done_dialog_text">All visitors has passed through all windows</string>
    <string name="simulation_done_dialog_title">Done!</string>
    <string name="simulation_done_dialog_button">See results</string>

    <string name="show_no_winners_dialog_text">No Winners</string>
    <string name="show_winners_dialog_title">Winners</string>

    <string name="show_states_dialog_text">No states</string>
    <string name="show_states_dialog_title">States</string>
</resources>